the code is now more clean and efficient

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 </head>
 <body>
   <div class="resultAlert">
-    <p class="winnerText">X venceu</p>
+    <p class="winnerText"></p>
 
     <p class="restartGameText">Deseja reiniciar o jogo?</p>
     <div>
-      <button onclick="takeAnswer('YES')">Sim</button>
-      <button onclick="takeAnswer('NO')">Não</button>
+      <button onclick="restartGame()">Reiniciar o jogo</button>
     </div>
   </div>
 
