changing folder structure and refactoring the code.

--- a/index.html
+++ b/index.html
@@ -17,25 +17,11 @@
     </div>
   </div>
 
-  <div class="gameBody">
+  <div class="gameBody"></div>
 
-    <div class="row firstRow">
-      <div class="square" onclick="insertElement(this, 0)"></div>
-      <div class="square" onclick="insertElement(this, 1)"></div>
-      <div class="square" onclick="insertElement(this, 2)"></div>
-    </div>
-    <div class="row secondRow">
-      <div class="square" onclick="insertElement(this, 0)"></div>
-      <div class="square" onclick="insertElement(this, 1)"></div>
-      <div class="square" onclick="insertElement(this, 2)"></div>
-    </div>
-    <div class="row thirdRow">
-      <div class="square" onclick="insertElement(this, 0)"></div>
-      <div class="square" onclick="insertElement(this, 1)"></div>
-      <div class="square" onclick="insertElement(this, 2)"></div>
-    </div>
 
-  </div>
-  <script src="scripts.js"></script>
+<script src="./src/createBoard.js"></script>
+<script src="./src/setSymbol.js"></script>
+<script src="./src/checkWinner.js"></script>
 </body>
 </html>
