the code is all commented and refactored, the logic is more clean now.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>TIC TAC TOE</title>
 </head>
 <body>
-  <div class="resultAlert">
+  <div class="gameResultAlert">
     <p class="winnerText"></p>
 
     <p class="restartGameText">Deseja reiniciar o jogo?</p>
@@ -23,5 +23,9 @@
 <script src="./src/createBoard.js"></script>
 <script src="./src/setSymbol.js"></script>
 <script src="./src/checkWinner.js"></script>
+<script src="./src/checkRow.js"></script>
+<script src="./src/checkColumn.js"></script>
+<script src="./src/checkDiagonal.js"></script>
+<script src="./src/restartGame.js"></script>
 </body>
 </html>
